--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
   <div class="social">
     <input type="checkbox" class="social-checkbox" id="social-toggle">
     <label for="social-toggle" class="social-btn"><span class="social-icon">&nbsp;</span></label>
+    <a href="https://www.linkedin.com/in/arya_7976/" target="_blank" class="social-link-linkedin"><img class="social-img social-linkedin" src="./img/icon-linkedin.png" alt="linkedin media"></a>
     <a href="https://github.com/Arya0077" target="_blank" class="social-link-github"><img class="social-img social-github" src="./img/icon-github.png" alt="github media"></a>
-    <!--<a href="https://instagram.com/arya.s_007" target="_blank" class="social-link-instagram"><img class="social-img social-instagram" src="./img/Icon-Insta.png" alt="instagram media"></a>
-    <a href="https://twitter.com/Arya7976" target="_blank" class="social-link-twitter"><img class="social-img social-twitter" src="./img/Icon-Twitter.png" alt="twitter media"></a> -->
-    <img class="social-img social-search" src="./img/icon-search.png" alt="social media">
+    <img class="social-img social-search" src="./img/Icon-search.png" alt="social media">
   </div>
     <div class="logo">
         <a href="#" class="logo-link"><span>&lt;</span>FragNite<span>/&gt;</span></a>
@@ -392,4 +391,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./JavaScript/script.js"></script>
 </body>
-</html>
+</html>  
