--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                   </div>
                 </div>
               </a>
-              <a href="https://www.mrwow.tk/" target="_blank" class="card card-1 move-in-left" style="background-image: url('./img/micky.jpg')">
+              <a href="https://www.badboysahni.tk/" target="_blank" class="card card-1 move-in-left" style="background-image: url('./img/micky.jpg')">
                 <div class="card__content">
                   <div class="card__content--description">
                     <h3 class="roll-up">
@@ -185,7 +185,7 @@
                   </div>
                 </div>
               </a>
-              <a href="http://www.genzographics.tk/" target="_blank" class="card card-2 move-in-down" style="background-image: url('./img/genzo.jpg');">
+              <a href="https://www.genzographics.tk/" target="_blank" class="card card-2 move-in-down" style="background-image: url('./img/genzo.jpg');">
                 <div class="card__content">
                   <div class="card__content--description">
                     <h3 class="roll-up">
@@ -369,8 +369,8 @@
               <form action="https://formspree.io/f/xoqrejvv" method="POST">
                 <label for="fname" class="contact-lable">Hi Arya, I'm</label>
                 <input type="text" id="fname" name="fname" placeholder="Your Name" class="contact-input"><br><br>
-                <label for="fcompany" class="contact-lable">I'm With</label>
-                <!--<input type="text" id="fcompany" name="fcompany" placeholder="Company Name" class="contact-input"><br><br> -->
+                <!--<<label for="fcompany" class="contact-lable">I'm With</label>
+                <input type="text" id="fcompany" name="fcompany" placeholder="Company Name" class="contact-input"><br><br> -->
                 <label for="fpurpose" class="contact-lable">I'm Contacting You To</label>
                 <input type="text" id="fpurpose" name="fpurpose" placeholder="A Short Description" class="contact-input"><br><br>
                 <label for="fcontact" class="contact-lable">You Can Reach Me At</label>
